fixed background repeat on mobile

--- a/demo/app/static/css/style.css
+++ b/demo/app/static/css/style.css
@@ -4,8 +4,10 @@
 #title-hero {
     background: linear-gradient( rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.8) ), url(../images/background5.jpg);
     background-position: center;
+    background-size: cover;
     /* height: 160px; */
 }
+
 
 #input-form {
     margin: 20px 0 20px 0;
